# Leptern

./: Cargo.toml  README.md  index.html
public/: styles.scss
src/: lib.rs  main.rs
src/bindings/: pdfjs.rs
src/components/: file_browser.rs  file_reader.rs  mod.rs  pdf_renderer.rs  recent_file.rs  sidebar.rs  text_renderer.rs
src/pages/: mod.rs  reader.rs
src/repositories/: file_store.rs  idb_database.rs  mod.rs  recent_files.rs
src/state/: current_file.rs  idb_context.rs  mod.rs  recent_files.rs
